@@ -1543,7 +1543,7 @@ if [ $TOS = unix ] ; then
         echol "makemake: configure failed to detect readline" >&2
         exit 1
       fi
-    else                        # readline is present
+    else                          # readline is present
       if [ "${with_dynamic_ffi}" != no ]; then
         BASE_MODULES=${BASE_MODULES}" readline"
       fi
@@ -1613,7 +1613,7 @@ fi
 
 OTHER_INCLUDES=' constpack avl sort subrkw bytecode'
 
-SPVW_INCLUDES=' spvw_module spvw_debug spvw_alloca spvw_mmap spvw_multimap spvw_singlemap spvw_page spvw_heap spvw_global spvw_gcstat spvw_space spvw_mark spvw_objsize spvw_update spvw_fault spvw_sigsegv spvw_sigcld spvw_sigpipe spvw_sigint spvw_sigwinch spvw_garcol spvw_genera1 spvw_gcmark spvw_genera2 spvw_weak spvw_genera3 spvw_allocate spvw_typealloc spvw_circ spvw_walk spvw_ctype spvw_language spvw_memfile'
+SPVW_INCLUDES=' spvw_module spvw_debug spvw_alloca spvw_mmap spvw_multimap spvw_singlemap spvw_page spvw_heap spvw_global spvw_gcstat spvw_space spvw_mark spvw_objsize spvw_update spvw_fault spvw_sigsegv spvw_sigcld spvw_sigpipe spvw_sigint spvw_sigwinch spvw_sigterm spvw_garcol spvw_genera1 spvw_gcmark spvw_genera2 spvw_weak spvw_genera3 spvw_allocate spvw_typealloc spvw_circ spvw_walk spvw_ctype spvw_language spvw_memfile'
 
 UNICODE_INCLUDES=''
 UNICODE_EXTRA=''
